@@ -936,11 +936,11 @@ Returns the updated post."
       (goto-char (point-min))
       (while (not (eobp))
         (let* ((delicious-cache-post (read (current-buffer)))
-               (href (cdr (elt delicious-cache-post 0)))
-               (description (cdr (elt delicious-cache-post 1)))
-               (tags (cdr (elt delicious-cache-post 2)))
-               (extended (cdr (elt delicious-cache-post 3)))
-               (time (cdr (elt delicious-cache-post 4))))
+               (href (cdr (assoc "href" delicious-cache-post)))
+               (description (cdr (assoc "description" delicious-cache-post)))
+               (tags (cdr (assoc "tag" delicious-cache-post)))
+               (extended (cdr (assoc "extended" delicious-cache-post)))
+               (time (cdr (assoc "time" delicious-cache-post))))
           (delicious-api-post href description tags extended time)
           (delicious-post-local delicious-cache-post)
           (message "%s posted." description)
